--- a/envs/vardict_amplicon.yml
+++ b/envs/vardict_amplicon.yml
@@ -2,6 +2,7 @@ channels:
     - bioconda
     - fescudie
 dependencies:
+    - python>=3.7
     - samtools=1.9
     - vardict-java=1.5.1
     - anacore-utils=3.1.0
