--- a/envs/vardict.yml
+++ b/envs/vardict.yml
@@ -3,5 +3,5 @@ channels:
     - bioconda
 dependencies:
     - samtools=1.9
-    - r-base=3.6.1=h9bb98a2_1
+    - r-base=3.6.1
     - vardict-java=1.7.0
